CU-397: Adjust some header spacing issues.

--- a/docroot/themes/custom/cu2019_grad/assets/css/styles.css
+++ b/docroot/themes/custom/cu2019_grad/assets/css/styles.css
@@ -1240,7 +1240,6 @@ nav a {
           flex-flow: row wrap;
   max-width: 1350px;
   margin: 0 auto;
-  width: 100%;
 }
 
 /* line 6, src/sass/structure/header/logo/_svg.scss */
@@ -9757,13 +9756,13 @@ nav.bc a:focus {
   padding: 0;
 }
 
-/* line 23, src/sass/components/navigation/_interior.scss */
+/* line 30, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav {
   position: relative;
 }
 
-/* line 26, src/sass/components/navigation/_interior.scss */
+/* line 33, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav label,
 nav.side-nav ul {
@@ -9772,28 +9771,28 @@ nav.side-nav ul {
   font-weight: 600;
 }
 
-/* line 33, src/sass/components/navigation/_interior.scss */
+/* line 40, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav ul {
   margin: 0;
   padding: 0;
 }
 
-/* line 56, src/sass/components/navigation/_interior.scss */
+/* line 63, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav .menu-item {
   margin: 0;
   padding: 0;
 }
 
-/* line 65, src/sass/components/navigation/_interior.scss */
+/* line 72, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav a {
   color: #555555;
   text-decoration: none;
 }
 
-/* line 69, src/sass/components/navigation/_interior.scss */
+/* line 76, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav a.is-active {
   color: #555555;
@@ -9808,7 +9807,7 @@ nav.side-nav a:focus {
   text-decoration: underline;
 }
 
-/* line 85, src/sass/components/navigation/_interior.scss */
+/* line 92, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav label {
   display: block;
@@ -9819,7 +9818,7 @@ nav.side-nav label {
   border-bottom: 1px solid #e1e7ec;
 }
 
-/* line 93, src/sass/components/navigation/_interior.scss */
+/* line 100, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav label:before,
 nav.side-nav label:after,
@@ -9835,21 +9834,21 @@ nav.side-nav label span:after {
   transition: all .25s;
 }
 
-/* line 106, src/sass/components/navigation/_interior.scss */
+/* line 113, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav label:before {
   -webkit-transform: translateY(-4px);
           transform: translateY(-4px);
 }
 
-/* line 110, src/sass/components/navigation/_interior.scss */
+/* line 117, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav label:after {
   -webkit-transform: translateY(4px);
           transform: translateY(4px);
 }
 
-/* line 120, src/sass/components/navigation/_interior.scss */
+/* line 127, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav input[type='checkbox'] {
   position: absolute;
@@ -9862,27 +9861,27 @@ nav.side-nav input[type='checkbox'] {
   clip: rect(0, 0, 0, 0);
 }
 
-/* line 124, src/sass/components/navigation/_interior.scss */
+/* line 131, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav input[type='checkbox']:checked ~ ul {
   display: block;
 }
 
-/* line 129, src/sass/components/navigation/_interior.scss */
+/* line 136, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav input[type='checkbox']:checked ~ label:before {
   -webkit-transform: rotate(45deg) translate(0);
           transform: rotate(45deg) translate(0);
 }
 
-/* line 133, src/sass/components/navigation/_interior.scss */
+/* line 140, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav input[type='checkbox']:checked ~ label:after {
   -webkit-transform: rotate(-45deg) translate(0);
           transform: rotate(-45deg) translate(0);
 }
 
-/* line 137, src/sass/components/navigation/_interior.scss */
+/* line 144, src/sass/components/navigation/_interior.scss */
 
 nav.side-nav input[type='checkbox']:checked ~ label span:after {
   opacity: 0;
@@ -12829,12 +12828,6 @@ form.search .search button {
     margin-top: -5rem;
   }
 
-  /* line 113, src/sass/structure/header/layouts/_main-nav-w-utility-bar.scss */
-
-  .main-header > div {
-    width: 95%;
-  }
-
   /* line 121, src/sass/structure/_footer.scss */
 
   .main-footer > div {
@@ -13260,12 +13253,6 @@ form.search .search button {
     position: relative;
     z-index: 0;
     padding: 0 3.6rem;
-  }
-
-  /* line 113, src/sass/structure/header/layouts/_main-nav-w-utility-bar.scss */
-
-  .main-header > div {
-    width: 90%;
   }
 
   /* line 6, src/sass/structure/header/logo/_svg.scss */
@@ -14398,7 +14385,7 @@ form.search .search button {
     z-index: 0;
   }
 
-  /* line 33, src/sass/components/navigation/_interior.scss */
+  /* line 40, src/sass/components/navigation/_interior.scss */
 
   nav.side-nav ul {
     font-size: 2.4rem;
@@ -14407,13 +14394,13 @@ form.search .search button {
     padding: 5rem 0;
   }
 
-  /* line 56, src/sass/components/navigation/_interior.scss */
+  /* line 63, src/sass/components/navigation/_interior.scss */
 
   nav.side-nav .menu-item {
     margin: 0 0 0.58333em 0;
   }
 
-  /* line 85, src/sass/components/navigation/_interior.scss */
+  /* line 92, src/sass/components/navigation/_interior.scss */
 
   nav.side-nav label {
     position: absolute;
@@ -14741,7 +14728,7 @@ form.search .search button {
     font-size: 1.75em;
   }
 
-  /* line 33, src/sass/components/navigation/_interior.scss */
+  /* line 40, src/sass/components/navigation/_interior.scss */
 
   nav.side-nav ul {
     padding: 6.25rem 0;
@@ -14767,12 +14754,6 @@ form.search .search button {
 }
 
 @media screen and (min-width: 1600px) {
-  /* line 113, src/sass/structure/header/layouts/_main-nav-w-utility-bar.scss */
-
-  .main-header > div {
-    width: 85%;
-  }
-
   /* line 121, src/sass/structure/_footer.scss */
 
   .main-footer > div {
@@ -14813,7 +14794,7 @@ form.search .search button {
   }
 }
 
-@media screen and (max-width: 1079.9px) {
+@media screen and (max-width: 1089.9px) {
   /* line 29, src/sass/base/_resets.scss */
 
   html,
@@ -15158,7 +15139,14 @@ form.search .search button {
     display: none;
   }
 
-  /* line 33, src/sass/components/navigation/_interior.scss */
+  /* line 22, src/sass/components/navigation/_interior.scss */
+
+  .section.side-nav-section > div {
+    padding: 0;
+    width: 100%;
+  }
+
+  /* line 40, src/sass/components/navigation/_interior.scss */
 
   nav.side-nav ul {
     display: none;
@@ -15167,7 +15155,7 @@ form.search .search button {
     text-align: right;
   }
 
-  /* line 65, src/sass/components/navigation/_interior.scss */
+  /* line 72, src/sass/components/navigation/_interior.scss */
 
   nav.side-nav a {
     display: block;
