--- a/docroot/themes/custom/cu2019_grad/src/sass/components/navigation/_interior.scss
+++ b/docroot/themes/custom/cu2019_grad/src/sass/components/navigation/_interior.scss
@@ -17,6 +17,13 @@
         z-index: 0;
       }
     }
+
+    @media #{$mediaToggleHeader} {
+      > div {
+        padding: 0;
+        width: 100%;
+      }
+    }
   }
 }
 
