--- a/docroot/themes/custom/cu2019_grad/src/sass/structure/header/layouts/_main-nav-w-utility-bar.scss
+++ b/docroot/themes/custom/cu2019_grad/src/sass/structure/header/layouts/_main-nav-w-utility-bar.scss
@@ -127,27 +127,27 @@
     }
 
     // ADJUST THE WIDTH FOR $siteWList IN EACH MEDIA QUERY USING $siteWQueryList
-    @each $q in $siteWQueryList {
-        $i: index($siteWQueryList, $q);
-
-        @if $i == 1 {
-            // POSITIONING (DISPLAY, FLEX, FLEX ITEM, POSITION, LEFT, TOP, TRANSFORM)
-            // BOX SIZING (WIDTH, HEIGHT, MARGIN, PADDING)
-            width: nth($siteWList, $i);
-            // BOX STYLING (OPACITY, BACKGROUND, BOX SHADOW, BORDER, BORDER RADIUS, OVERFLOW)
-            // FONT STYLING (FONT, FONT-FAMILY, FONT-STYLE, FONT-SIZE, LINE-HEIGHT, FONT-WEIGHT)
-            // TEXT STYLING (TEXT-DECORATION, TEXT-TRANSFORM, TEXT-ALIGN, TEXT-SHADOW)
-            // OTHER (TRANSITONS, ANIMATIONS, CURSOR)
-        } @else {
-            @media #{$q} {
-                // POSITIONING (DISPLAY, FLEX, FLEX ITEM, POSITION, LEFT, TOP, TRANSFORM)
-                // BOX SIZING (WIDTH, HEIGHT, MARGIN, PADDING)
-                width: nth($siteWList, $i);
-                // BOX STYLING (OPACITY, BACKGROUND, BOX SHADOW, BORDER, BORDER RADIUS, OVERFLOW)
-                // FONT STYLING (FONT, FONT-FAMILY, FONT-STYLE, FONT-SIZE, LINE-HEIGHT, FONT-WEIGHT)
-                // TEXT STYLING (TEXT-DECORATION, TEXT-TRANSFORM, TEXT-ALIGN, TEXT-SHADOW)
-                // OTHER (TRANSITONS, ANIMATIONS, CURSOR)
-            }
-        }
-    }
+    // @each $q in $siteWQueryList {
+    //     $i: index($siteWQueryList, $q);
+    //
+    //     @if $i == 1 {
+    //         // POSITIONING (DISPLAY, FLEX, FLEX ITEM, POSITION, LEFT, TOP, TRANSFORM)
+    //         // BOX SIZING (WIDTH, HEIGHT, MARGIN, PADDING)
+    //         width: nth($siteWList, $i);
+    //         // BOX STYLING (OPACITY, BACKGROUND, BOX SHADOW, BORDER, BORDER RADIUS, OVERFLOW)
+    //         // FONT STYLING (FONT, FONT-FAMILY, FONT-STYLE, FONT-SIZE, LINE-HEIGHT, FONT-WEIGHT)
+    //         // TEXT STYLING (TEXT-DECORATION, TEXT-TRANSFORM, TEXT-ALIGN, TEXT-SHADOW)
+    //         // OTHER (TRANSITONS, ANIMATIONS, CURSOR)
+    //     } @else {
+    //         @media #{$q} {
+    //             // POSITIONING (DISPLAY, FLEX, FLEX ITEM, POSITION, LEFT, TOP, TRANSFORM)
+    //             // BOX SIZING (WIDTH, HEIGHT, MARGIN, PADDING)
+    //             width: nth($siteWList, $i);
+    //             // BOX STYLING (OPACITY, BACKGROUND, BOX SHADOW, BORDER, BORDER RADIUS, OVERFLOW)
+    //             // FONT STYLING (FONT, FONT-FAMILY, FONT-STYLE, FONT-SIZE, LINE-HEIGHT, FONT-WEIGHT)
+    //             // TEXT STYLING (TEXT-DECORATION, TEXT-TRANSFORM, TEXT-ALIGN, TEXT-SHADOW)
+    //             // OTHER (TRANSITONS, ANIMATIONS, CURSOR)
+    //         }
+    //     }
+    // }
 }
